Translate token.json file to Spanish

--- a/src/locales/es/token.json
+++ b/src/locales/es/token.json
@@ -2,66 +2,66 @@
   "token": {
     "siteMetadata": {
       "title": "Token",
-      "description": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency."
+      "description": "Los participantes en nuestras redes de prueba ahora pueden ganar Joystream Testnet Tokens (tJOYs) respaldados por moneda fiduciaria."
     },
     "hero": {
-      "title": "Understanding the tJOY token",
-      "text": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency.",
+      "title": "Entendiendo el tJOY token",
+      "text": "Los participantes en nuestras redes de prueba ahora pueden ganar Joystream Testnet Tokens (tJOYs) respaldados por moneda fiduciaria.",
       "tokenStats": {
-        "title": "Token in numbers",
-        "exchangeRate": "Exchange Rate",
-        "backingValue": "Backing Value",
-        "supply": "Supply"
+        "title": "El token en números",
+        "exchangeRate": "Ratio de intercambio",
+        "backingValue": "Valor de respaldo",
+        "supply": "Suministro"
       }
     },
     "faq": {
-      "title": "Testnet Token Information",
+      "title": "Información del token de la red de pruebas",
       "whatIsTJoy": {
-        "title": "What is tJOY?",
-        "text": "tJOY (testJOY) is the currency used on Joystream incentivized testnets."
+        "title": "Qué es tJOY?",
+        "text": "tJOY (testJOY) es la divisa usada en las redes de prueba incentivadas de Joystream."
       },
       "tJoyValueOrigin": {
-        "title": "Where does the value of tJOY come from?",
-        "text": "Jsgenesis, the team behind the Joystream project, have linked the total supply of tJOYs to a corresponding pool of fiat currency (USD) held by the company. All testnet participants can redeem their tJOY for USD at any time."
+        "title": "¿De dónde viene el valor de tJOY?",
+        "text": "Jsgenesis, el equipo detrás de Joystream project, han vinculado el suministro total de tJOY a un pool correspondiente de moneda fiduciaria (USD) mantenido por la empresa. Todos los participantes de la red de pruebas pueden canjear su tJOY por USD en cualquier momento."
       },
       "purposeOfTJoy": {
-        "title": "What is the purpose of tJOY?",
-        "text": "tJOY can be used on our testnets in the same ways that future users of the Joystream platform will be able to use the mainnet JOY token. The three principal functions of tJOY are in staking, governance and for payment.<0/><0/> For example, to participate in testnet roles, users may need to stake tJOY. To create governance proposals and vote for Council Members, tJOY is also required. Finally, on the testnet, bounties and KPIs require tJOYs for paying effective contributors."
+        "title": "Cuál es el propósito de tJOY?",
+        "text": "tJOY se puede ser usado en nuestras redes de prueba de la misma manera que los futuros usuarios de la plataforma Joystream podrán usar el token JOY de la red principal. Las tres funciones principales de tJOY son el staking, la gobernanza y el pago.<0/><0/>Por ejemplo, para participar en roles de la red de pruebas, los usuarios pueden necesitar realizar staking con tJOY. Para crear propuestas de gobernanza y votar por los miembros del Consejo, también se requiere tJOY. Finalmente, en la red de pruebas, las recompensas y los KPI requieren tJOY para pagar contribuyentes efectivos."
       },
       "whereCanTJoyBeObtained": {
-        "title": "Where can I get tJOY?",
-        "text": "There are many opportunities to obtain tJOY. Smaller amounts can be requested in our community channels (including our Discord server and on-chain forum), while larger sums can be accumulated by participating in bounties, competitions and other events."
+        "title": "¿Dónde puedo conseguir tJOY?",
+        "text": "Hay muchas oportunidades para obtener tJOY. Se pueden solicitar cantidades más pequeñas en nuestros canales de la comunidad (incluido nuestro servidor de Discord y el foro on-chain), mientras que se pueden acumular sumas más grandes participando en recompensas, concursos y otros eventos."
       },
       "linkBetweenTJoyAndFutureToken": {
-        "title": "Is there any link between tJOY and the future mainnet token?",
-        "text": "There is no direct link between tJOY and mainnet JOY. We are using tJOY to simulate the real economic incentives present on mainnet to aid the platform's development and facilitate the growth and education of our community in preparation of the transition from testnet to mainnet."
+        "title": "¿Existe alguna relación entre tJOY y el futuro token de la red principal?",
+        "text": "No existe un vínculo directo entre tJOY y mainnet JOY. Estamos utilizando tJOY para simular los incentivos económicos reales presentes en la red principal para ayudar al desarrollo de la plataforma y facilitar el crecimiento y la educación de nuestra comunidad en preparación de la transición de la red de pruebas a la red principal."
       },
       "howToCashout": {
-        "title": "How do I cashout tJOY to USD?",
-        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key from which the transfer is made to your BCH address. At the moment of the transfer, the BCH to USD exchange rate is locked. <1/><1/>More information on payouts can be found <2>here</2>."
+        "title": "¿Cómo retiro tJOY a USD?",
+        "text": "Usamos Bitcoin Cash (BCH) como vía de pago en nuestras redes de prueba. Puede retirar tJOY haciendo una transferencia a la dirección dedicada a la quema : <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Antes de hacer esto, debe configurar el <0>memo</0> de la clave desde la cual se realiza la transferencia a su BCH Dirección. En el momento de la transferencia, el tipo de cambio de BCH a USD está bloqueado. <1/><1/>Puede encontrar más información sobre los pagos <2>aquí</2>."
       },
       "howToEarn": {
-        "title": "How can I earn mainnet JOY?",
-        "text": "Currently, the only way to secure an allocation of mainnet JOY is through high-quality contributions to the platform and community via our <0>Founding Member Program</0>."
+        "title": "¿Cómo puedo conseguir JOY de la red principal",
+        "text": "Actualmente, la única forma de asegurar una asignación de JOY de la red principal es a través de contribuciones de alta calidad a la plataforma y la comunidad a través de nuestro <0>Programa de miembros fundadores</0>."
       },
       "TJoyWorth": {
-        "title": "How much is tJOY worth?",
-        "text": "You can check the live exchange rate (tJOY->USD) on this page (see above)."
+        "title": "¿Cuánto vale tJOY?",
+        "text": "Puede verificar el tipo de cambio en vivo (tJOY-> USD) en esta página (ver arriba)."
       }
     },
     "cashouts": {
-      "title": "Pending cashouts",
-      "subtitle": "Tokens sent to Jsgenesis in this exchange are burned, hence the final price of the token is unaffected by such an exchange.",
+      "title": "Retiros pendientes",
+      "subtitle": "Los tokens enviados a Jsgenesis en este exchange se queman, por lo que el precio final del token no se ve afectado por dicho intercambio.",
       "cashout": {
-        "address": "Source address",
-        "tokensTransferred": "Tokens transferred",
-        "usdValue": "USD Value",
-        "blockNumber": "Block Number",
-        "exchangeNumber": "Exchange #"
+        "address": "Dirección de la fuente",
+        "tokensTransferred": "Tokens transferidos",
+        "usdValue": "Valor en USD",
+        "blockNumber": "Número de bloque",
+        "exchangeNumber": "Intercambio #"
       }
     },
     "cta": {
-      "title": "Join our Discord and change the online video industry"
+      "title": "Únase a nuestro Discord y cambie la industria del video en línea"
     }
   }
 }
