--- a/src/locales/es/token.json
+++ b/src/locales/es/token.json
@@ -61,7 +61,7 @@
       }
     },
     "cta": {
-      "title": "Únete a nuestro Discord y cambia la industria del video en línea"d
+      "title": "Únete a nuestro Discord y cambia la industria del video en línea"
     }
   }
 }
