Fixed Constantinopole translation

--- a/src/locales/ru/constantinople.json
+++ b/src/locales/ru/constantinople.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Constantinople",
-      "text": "Тестнет Constantinople представляет улучшенную систему внесения предложений, а также модель токенов с обеспечением фиатными средствами для выплат участникам.",
+      "text": "Тестнет Constantinople предоставляет улучшенную систему внесения предложений, а также модель токенов с обеспечением фиатными средствами для выплат участникам.",
       "chipText": "Что это?"
     },
     "heroCard": {
@@ -32,7 +32,7 @@
       "goals": {
         "proposalSystem": {
           "title": "Запуск новой системы предложений",
-          "text": "Тестнет Constantinople построен на внедрении системы предложений, которая укрепляет структуру управления платформой, делегируя повседневную ответственность за мониторинг сети и выделение ресурсов избирателям и совету."
+          "text": "Тестнет Constantinople построен на системе предложений, которая поддерживает структуру управления платформой, делегируя повседневную ответственность за мониторинг сети и выделение ресурсов избирателям и совету."
         },
         "tokenModel": {
           "title": "Ввод в оборот токенов, обеспеченных фиатом",
@@ -45,7 +45,7 @@
     },
     "map": {
       "title": "Константинополь",
-      "text": "<0>Константинополь был столицей Восточной Римской империи в 4-м веке н.э.</0> Он славился своей массивной и сложной системой обороны, а также своими архитектурными шедеврами и роскошными дворцами аристократии. Как и в случае с городом, мы надеемся, что наша тестовая сеть Константинополя станет достойным преемником Рима (Rome).<1/><1/><2><0/> Читать в блоге</2>"
+      "text": "<0>Константинополь был столицей Восточной Римской империи в 4-м веке н.э.</0> Он славился своей массивной и сложной системой обороны, а также своими архитектурными шедеврами и роскошными дворцами аристократии. Мы надеемся, что наша тестовая сеть Constantinople станет достойной преемницей сети Rome, подобно Константинополю, преемнику Рима.<1/><1/><2><0/> Читать в блоге</2>"
     }
   }
 }
