Fixes in 'about'

--- a/src/locales/ru/about.json
+++ b/src/locales/ru/about.json
@@ -2,30 +2,30 @@
   "about": {
     "general": {
       "roles": {
-        "blockchain": "Блокчейн разработчик",
-        "frontEnd": "Фронтенд разработчик",
+        "blockchain": "Блокчейн-разработчик",
+        "frontEnd": "Фронтенд-разработчик",
         "design": "Дизайнер",
         "growth": "Стратегия развития",
         "core": "Ядро",
-        "ceo": "CEO",
-        "cto": "CTO",
-        "cooAndGrowth": "COO & стратегия",
+        "ceo": "Исполнительный директор",
+        "cto": "Технический директор",
+        "cooAndGrowth": "Операционный и стратегический директор",
         "all": "Все",
         "allMembers": "Все члены"
       }
     },
     "siteMetadata": {
-      "title": "Про нас",
-      "description": "Мы не только предлагаем отличную заработную плату и гибкие условия, но и четкую миссию, коллектив и время для создание чего-то, что изменило бы мир."
+      "title": "О нас",
+      "description": "Мы предлагаем не только отличную заработную плату и гибкие условия, но и прекрасную миссию, команду и время на создание чего-то принципиально нового."
     },
     "hero": {
-      "title": "Мы создаем Joystream чтобы отпустить его на свободу",
+      "title": "Мы создаем Joystream, чтобы дать ему свободу",
       "subtitle": "Команда Jsgenesis является ядром, которое разрабатывает Joystream - платформу на блокчейне с открытым исходным кодом."
     },
     "ourTeam": {
       "title": "Наша команда",
-      "subtitle": "Несмотря на то что мы из разных стран, все мы разделяем страсть к проектам с открытым исходным кодом, технологии блокченйн, распределенным системам, уважению к приватности, а также идеи построения нового интернета, основанного на принципах открытой отчетности и возможности создания форков.",
-      "moreMembers": "Загрузить больше"
+      "subtitle": "Несмотря на то что мы из разных стран, все мы разделяем страсть к проектам с открытым исходным кодом, технологии блокчейн, распределенным системам, уважение к приватности, а также идеи построения нового интернета, основанного на принципах открытой отчетности и возможности создания форков.",
+      "moreMembers": "Другие члены команды"
     },
     "investors": {
       "title": "Наши инвесторы"
@@ -35,11 +35,11 @@
       "available": "Открыто 3 вакансии",
       "join": "Присоединиться",
       "roles": {
-        "frontEnd": "Фронтенд разработчик",
-        "blockchain": "Блокчейн разработчик",
+        "frontEnd": "Фронтенд-разработчик",
+        "blockchain": "Блокчейн-разработчик",
         "designer": "Ведущий UI/UX дизайнер"
       },
-      "location": "Осло, Европа, Удаленная работа",
+      "location": "Осло, Европа, удаленная работа",
       "employmentType": "Полная занятость",
       "salary": {
         "frontEnd": "$80K-$130K",
