Fixed Hydra translation

--- a/src/locales/ru/hydra.json
+++ b/src/locales/ru/hydra.json
@@ -9,8 +9,8 @@
       "text": "Вдохновляясь идеей The Graph, Hydra предоставляет разработчикам удобный способ составления запросов о состоянии и истории блокчейна на базе Substrate посредством GraphQL."
     },
     "value": {
-      "title": "Мы делаем жизнь проще",
-      "subtitle": "Создание приложений, взаимодействующих напрямую с базой Substrate - задача из разряда невыполнимых, и даже простая попытка оборачивается в длительный и сложный процесс.",
+      "title": "С нами все просто",
+      "subtitle": "Создание приложений, взаимодействующих напрямую с базой Substrate, - задача из разряда невыполнимых, и даже простая попытка оборачивается в длительный и сложный процесс.",
       "values": {
         "slowFetching": {
           "title": "Медленное получение данных",
@@ -47,7 +47,7 @@
       "values": {
         "fullTextSearch": {
           "title": "Полнотекстовый поиск",
-          "text": "Используйте любое количество строковых полей, декорированных с помощью @fulltext (query: \"myquery\") для поиска по различным полям и объектам"
+          "text": "Используйте любое количество строковых полей, декорированных с помощью @fulltext (query: \"myquery\"), для поиска по различным полям и объектам"
         },
         "filtering": {
           "title": "Фильтрация",
@@ -63,18 +63,18 @@
         },
         "polymorphism": {
           "title": "Полиморфизм",
-          "text": "Нативная поддержка интерфейсов GraphQL, а также встроенных запросов"
+          "text": "Нативная поддержка интерфейсов GraphQL, а также встроенных фрагментов"
         },
         "algebraicTypes": {
           "title": "Алгебраические типы",
-          "text": "Составляйте запросы с широкой поддержкой алгебраических типов данных используя директиву @variant"
+          "text": "Составляйте запросы с широкой поддержкой алгебраических типов данных, используя директиву @variant"
         }
       }
     },
     "videoTitle": "Смотрите видеоинструкцию",
     "getStarted": {
       "title": "Ознакомьтесь с Hydra прямо сейчас!",
-      "subtitle": "Чтобы узнать еще больше, воспользуйтесь следующими ссылками для связи с нами.",
+      "subtitle": "Чтобы узнать еще больше, воспользуйтесь следующими ссылками для связи с нами",
       "links": {
         "documentation": {
           "name": "Документация",
@@ -90,7 +90,7 @@
         },
         "discord": {
           "name": "Discord",
-          "link": "Перейти к каналу"
+          "link": "Ссылка на канал"
         }
       }
     }
