Fixed Hydra translation

--- a/src/locales/ru/hydra.json
+++ b/src/locales/ru/hydra.json
@@ -2,11 +2,11 @@
   "hydra": {
     "siteMetadata": {
       "title": "Hydra - фреймворк для запросов в Substrate",
-      "description": "Вдохновляясь идеей The Graph, Hydra предоставляет разработчикам удобный способ составления запросов о состоянии и истории блокчейна на базе Substrate посредством GraphQL."
+      "description": "Вдохновленная идеей The Graph, Hydra предоставляет разработчикам удобный способ составления запросов о состоянии и истории блокчейна на базе Substrate посредством GraphQL."
     },
     "hero": {
       "title": "Hydra - фреймворк для запросов в Substrate",
-      "text": "Вдохновляясь идеей The Graph, Hydra предоставляет разработчикам удобный способ составления запросов о состоянии и истории блокчейна на базе Substrate посредством GraphQL."
+      "text": "Вдохновленная идеей The Graph, Hydra предоставляет разработчикам удобный способ составления запросов о состоянии и истории блокчейна на базе Substrate посредством GraphQL."
     },
     "value": {
       "title": "С нами все просто",
