Fixed landing translation

--- a/src/locales/ru/landing.json
+++ b/src/locales/ru/landing.json
@@ -19,13 +19,13 @@
     "becomeFM": {
       "subtitle": "Уникальная схема распределения токенов среди сообщества",
       "title": "Станьте одним из членов-основателей и получите токены основной сети, влияя на развитие платформы.",
-      "alternateTitle": "Станьте одним из членов-основателей и получите реальное влияние на разработку платформы.",
-      "link": "Узнайте больше о нашей щедрой программе лояльности"
+      "alternateTitle": "Станьте одним из членов-основателей и оказывайте ощутимое влияние на развитие платформы.",
+      "link": "Узнать больше о нашей щедрой программе лояльности"
     },
     "whatWeDo": {
       "subtitle": "Наша мотивация при построении протокола Joystream",
-      "title": "Мы призываем к ответственности медиаплатформ перед людьми, на которых они влияют.",
-      "link": "Читайте наш манифест"
+      "title": "Мы за устройство, при котором медиаплатформы ответственны перед людьми, на которых они влияют.",
+      "link": "Прочтите манифест"
     },
     "whyYouShouldJoin": {
       "title": "Зачем участвовать в тестнетах?",
@@ -46,20 +46,20 @@
     },
     "exploreJoystream": {
       "title": "Начните изучение Joystream прямо сейчас",
-      "subtitle": "Два быстро развивающихся приложения для получения контента и управления.",
+      "subtitle": "Два быстро развивающихся приложения для просмотра контента и управления.",
       "atlas": {
-        "text": "Atlas - флагманское приложение для получения и публикации контента в Joystream. Просматривайте видео, следите за авторами, открывайте для себя новый контент, либо создавайте собственный канал и формируйте свою аудиторию.",
-        "link": "Попробуйте Atlas",
+        "text": "Atlas - флагманское приложение для просмотра и публикации контента в Joystream. Смотрите видео, подписывайтесь на авторов, открывайте для себя новый контент либо создавайте собственный канал и формируйте свою аудиторию.",
+        "link": "Попробовать Atlas",
         "imageAlt": "Обзор интерфейса Atlas"
       },
       "pioneer": {
-        "text": "Pioneer дает возможность выполнять операции в рамках сообщества, а также управлять им. Голосуйте на выборах, организовывайте сбор средств на собственный проект либо поддерживайте работу платформы, принимая участие в оплачиваемых ролях.",
-        "link": "Попробуйте Pioneer",
+        "text": "Pioneer дает возможность выполнять работу в рамках сообщества, а также управлять им. Голосуйте на выборах, организовывайте сбор средств на собственный проект либо поддерживайте работу платформы, принимая участие в оплачиваемых ролях.",
+        "link": "Попробовать Pioneer",
         "imageAlt": "Обзор интерфейса Pioneer"
       }
     },
     "roadToMainnet": {
-      "title": "Дорожная карта к основной сети",
+      "title": "Путь к основной сети",
       "testnetState": {
         "Current": "Текущий тестнет",
         "Past": "Прошедший тестнет",
@@ -73,47 +73,47 @@
       "testnets": {
         "Sparta": {
           "title": "Тестнет Sparta",
-          "text": "Sparta наш второй тестнет, в котором представлено множество важных технических улучшений.",
+          "text": "Sparta - наш второй тестнет, в котором представлено множество важных технических улучшений.",
           "explore": "Информация о Sparta"
         },
         "Athens": {
           "title": "Тестнет Athens",
-          "text": "Athens наш третий тестнет, в котором представлено множество важных технических улучшений.",
+          "text": "Athens - наш третий тестнет, в котором представлено множество важных технических улучшений.",
           "explore": "Информация об Athens"
         },
         "Acropolis": {
           "title": "Тестнет Acropolis",
-          "text": "Acropolis наш четвертый тестнет, в котором представлено множество важных технических улучшений.",
+          "text": "Acropolis - наш четвертый тестнет, в котором представлено множество важных технических улучшений.",
           "explore": "Информация об Acropolis"
         },
         "Rome": {
           "title": "Тестнет Rome",
-          "text": "Rome наш пятый тестнет, в котором представлено множество важных технических улучшений.",
+          "text": "Rome - наш пятый тестнет, в котором представлено множество важных технических улучшений.",
           "explore": "Информация о Rome"
         },
         "Constantinople": {
           "title": "Тестнет Constantinople",
-          "text": "Constantinople наш шестой тестнет, в котором представлено множество важных технических улучшений.",
+          "text": "Constantinople - наш шестой тестнет, в котором представлено множество важных технических улучшений.",
           "explore": "Информация о Constantinople"
         },
         "Alexandria": {
           "title": "Тестнет Alexandria",
-          "text": "Alexandria наш седьмой тестнет, в котором представлено множество важных технических улучшений.",
+          "text": "Alexandria - наш седьмой тестнет, в котором представлено множество важных технических улучшений.",
           "explore": "Информация об Alexandria"
         },
         "Babylon": {
           "title": "Тестнет Babylon",
-          "text": "Babylon наш восьмой тестнет, в котором представлено множество важных технических улучшений.",
+          "text": "Babylon - наш восьмой тестнет, в котором представлено множество важных технических улучшений.",
           "explore": "Информация о Babylon"
         },
         "Antioch": {
           "title": "Тестнет Antioch",
-          "text": "Antioch наш девятый тестнет, устраняющий баг, который вызвал разрыв блокчейна в сети Babylon.",
+          "text": "Antioch - наш девятый тестнет, устранивший баг, который вызвал разрыв блокчейна в сети Babylon.",
           "explore": "Информация об Antioch"
         },
         "Sumer": {
           "title": "Тестнет Sumer",
-          "text": "Sumer наш десятый тестнет, представляющий приложение для воспроизведения, которое упрощает загрузку контента.",
+          "text": "Sumer - наш десятый тестнет, представивший приложение для воспроизведения, которое упрощает загрузку контента.",
           "explore": "Информация о Sumer"
         }
       }
